k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: 348452969126.dkr.ecr.us-east-1.amazonaws.com/cloudshop-backend:healthfix
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
