k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: 348452969126.dkr.ecr.us-east-1.amazonaws.com/cloudshop-frontend:fix2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
